--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
                 <li><a [routerLink]="['/basic-drag']" routerLinkActive="router-link-active">Basic drag</a></li>
                 <li><a [routerLink]="['one-direction-only']">One direction only</a></li>
                 <li><a [routerLink]="['basic-list']">Basic list</a></li>
-                <li></li>
+                <li><a [routerLink]="['connected-list']">Connected list</a></li>
                 <li></li>
             </ul>
         </div>
