free drag added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
                 <li><a [routerLink]="['one-direction-only']">One direction only</a></li>
                 <li><a [routerLink]="['basic-list']">Basic list</a></li>
                 <li><a [routerLink]="['connected-list']">Connected list</a></li>
-                <li></li>
+                <li><a [routerLink]="['workflow']">Workflow</a></li>
             </ul>
         </div>
         <div class="col-9">
