--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 body {
-    background: white;
+    
     background-image: radial-gradient(rgb(214, 212, 212) 1px, transparent 0);
+    background-color:#f3f2f2 !important;
     background-size: 10px 10px;
     background-position: -19px -19px;
 }
