--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,40 @@
-<div class="container">
-    <div class="row">
-        <div class="col-3">
-            <ul class="list-style-none">
-                <li><a [routerLink]="['/basic-drag']" routerLinkActive="router-link-active">Basic drag</a></li>
-                <li><a [routerLink]="['one-direction-only']">One direction only</a></li>
-                <li><a [routerLink]="['basic-list']">Basic list</a></li>
-                <li><a [routerLink]="['connected-list']">Connected list</a></li>
-                <li><a [routerLink]="['workflow']">Workflow</a></li>
-            </ul>
-        </div>
-        <div class="col-9">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+
+<main>
+    <h1 class="visually-hidden">Sidebars examples</h1>
+  
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
     
-</div>
+        <span class="fs-4">&nbsp;</span>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['/basic-drag']" routerLinkActive="router-link-active">Basic drag</a></li>
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['one-direction-only']">One direction only</a></li>
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['basic-list']">Basic list</a></li>
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['connected-list']">Connected list</a></li>
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['workflow']">Workflow</a></li>        
+      </ul>
+      <hr>
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+          <strong>mdo</strong>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+          <li><a class="dropdown-item" href="#">New project...</a></li>
+          <li><a class="dropdown-item" href="#">Settings</a></li>
+          <li><a class="dropdown-item" href="#">Profile</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#">Sign out</a></li>
+        </ul>
+      </div>
+    </div>     
+   
+    <div class="b-example-divider"></div>
+
+    <div class="container-fluid">
+        <router-outlet></router-outlet>
+    </div>
+  </main>
+  
