--- a/src/app/screens/workflow/workflow.component.html
+++ b/src/app/screens/workflow/workflow.component.html
@@ -31,9 +31,13 @@
                     <circle cx="28" cy="28" r="28" stroke="none"/>
                     <circle cx="28" cy="28" r="27" fill="none"/>
                 </g>
-            </svg>     
+            </svg>    
         </div>
-
+ 
+        <svg class="connection">
+            <path class="main-path" [attr.d]="get(100,5,150,260)"></path>
+        </svg>
+        
             <div class="item" appDragium positionX="150" positionY="160">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 169.706 169.706">
                     <g id="decision" transform="translate(-1444.147 -336.147)">
