--- a/src/app/screens/workflow/workflow.component.scss
+++ b/src/app/screens/workflow/workflow.component.scss
@@ -20,3 +20,26 @@
     right: 20px;
     bottom:20px;;
 }
+
+
+
+
+
+.connection {
+    position: absolute;
+    pointer-events: none;
+}
+svg {
+    z-index: 0;
+    position: absolute;
+    overflow: visible!important;
+}
+svg:not(:root) {
+    overflow-clip-margin: content-box;
+    overflow: hidden;
+}
+.main-path {
+    fill: none;
+    stroke-width: 5px;
+    stroke: #4682b4;
+}
