--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['basic-list']">Basic list</a></li>
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['connected-list']">Connected list</a></li>
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['workflow']">Workflow</a></li>        
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['kanban']">Kanban</a></li> 
       </ul>
       <hr>
       <div class="dropdown">
