--- a/src/app/screens/basic-drag/basic-drag.component.html
+++ b/src/app/screens/basic-drag/basic-drag.component.html
@@ -1,1 +1,1 @@
-<div class="box" appDragium>basic drag works!</div>
+<div class="box" appDragium [returnInitialPosition]="false">basic drag works!</div>
