--- a/src/app/screens/one-direction-only/one-direction-only.component.html
+++ b/src/app/screens/one-direction-only/one-direction-only.component.html
@@ -1,6 +1,6 @@
-<div  class="box" appDragium dragDirection="horizontal">Horizontal drag works!</div>
+<div  class="box" appDragium dragDirection="horizontal" [returnInitialPosition]="false">Horizontal drag works!</div>
 
-<div class="box"  appDragium dragDirection="vertical">Vertical drag works!</div>
+<div class="box"  appDragium dragDirection="vertical" [returnInitialPosition]="false">Vertical drag works!</div>
 
 
 
