--- a/src/app/screens/basic-list/basic-list.component.html
+++ b/src/app/screens/basic-list/basic-list.component.html
@@ -1,3 +1,5 @@
 <ul appDropium (dropped)="dropped($event)"  returnInitialPosition="true">
-   <li appDragium *ngFor="let item of items">{{item}}</li>   
+   <li appDragium *ngFor="let item of items">     
+      {{item}}
+   </li>   
 </ul>
