--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
-body {
+html, body {
     min-height: 100vh;
     min-height: -webkit-fill-available;
-  }
-  
-  html {
-    height: -webkit-fill-available;
+    overflow: hidden !important;
+    width: 100% !important;
+    height: 100% !important;
   }
   
   main {
@@ -13,7 +12,7 @@ body {
     height: 100vh;
     height: -webkit-fill-available;
     max-height: 100vh;
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
   }
   
