--- a/src/app/screens/workflow/components/item-connection/item-connection.component.html
+++ b/src/app/screens/workflow/components/item-connection/item-connection.component.html
@@ -1,4 +1,5 @@
-<svg [attr.height]="height" [attr.width]="width">
-    <path [attr.d]="get()" stroke="red" stroke-width="2" fill="none" />
-</svg>
-  
+<div [ngStyle]="{'transform': 'translate3d('+x1+'px,'+y1+'px,0)'}">
+    <svg [attr.height]="height" [attr.width]="width+4">
+        <path [attr.d]="PathExpression()" stroke="#2055bb" stroke-width="2" fill="none" />
+    </svg>
+</div>
