--- a/src/app/screens/workflow/workflow.component.html
+++ b/src/app/screens/workflow/workflow.component.html
@@ -19,22 +19,34 @@
 
     <div [ngStyle]="{ 'transform': 'translate(0px, 0px) scale('+scale+')' , 'overflow':'hidden','height':'calc(100% - 50px)','width':'100%' }">
 
-        <div class="item" appDragium [returnInitialPosition]="false" positionX="150" positionY="60">
-            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 120 120" style="position:relative;z-index:1200;">
-                <g id="start" transform="translate(-936 -569)">
-                <circle id="Ellipse_1" data-name="Ellipse 1" cx="60" cy="60" r="60" transform="translate(936 569)" fill="#2055bb"/>
-                <path id="Polygon_1" data-name="Polygon 1" d="M26,0,52,31H0Z" transform="translate(1011.5 603) rotate(90)" fill="#fff"/>
-                </g>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 56 56" style="position: relative;top:-10px;left:20px;z-index:900;">
-                <g id="Ellipse_4" data-name="Ellipse 4" fill="#fff" stroke="#dcdcdc" stroke-width="2">
-                    <circle cx="28" cy="28" r="28" stroke="none"/>
-                    <circle cx="28" cy="28" r="27" fill="none"/>
-                </g>
-            </svg>    
+        <div *ngFor="let flowElement of flowElements">
+            <div [ngSwitch]="flowElement.type">
+                <div *ngSwitchCase="'start'">
+                    <div class="item" appDragium (ondrag)="drag($event)" [returnInitialPosition]="false" [positionX]="flowElement.positionX" [positionY]="flowElement.positionY">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 120 120" style="position:relative;z-index:1200;">
+                            <g id="start" transform="translate(-936 -569)">
+                            <circle id="Ellipse_1" data-name="Ellipse 1" cx="60" cy="60" r="60" transform="translate(936 569)" fill="#2055bb"/>
+                            <path id="Polygon_1" data-name="Polygon 1" d="M26,0,52,31H0Z" transform="translate(1011.5 603) rotate(90)" fill="#fff"/>
+                            </g>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 56 56" style="position: relative;top:-10px;left:20px;z-index:900;">
+                            <g id="Ellipse_4" data-name="Ellipse 4" fill="#fff" stroke="#dcdcdc" stroke-width="2">
+                                <circle cx="28" cy="28" r="28" stroke="none"/>
+                                <circle cx="28" cy="28" r="27" fill="none"/>
+                            </g>
+                        </svg>    
+                    </div>            
+                </div>
+                <div *ngSwitchCase="'connection'">
+                    <app-item-connection (ondrag)="drag($event)" [x1]="flowElements[0].positionX" [y1]="flowElements[0].positionY" x2="400" y2="425"></app-item-connection>
+                </div>
+                <div *ngSwitchDefault>output2</div>
+            </div>
         </div>
+
+        
  
-        <app-item-connection></app-item-connection>
+
  
             <div class="item" appDragium [returnInitialPosition]="false" positionX="150" positionY="160">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 169.706 169.706">
