--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['/basic-drag']" routerLinkActive="router-link-active">Basic drag</a></li>
+        <li class="nav-item"><a class="nav-link text-white" [routerLink]="['/basic-drag-with-handle']">Basic drag with handle</a></li>
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['one-direction-only']">One direction only</a></li>
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['basic-list']">Basic list</a></li>
         <li class="nav-item"><a class="nav-link text-white" [routerLink]="['connected-list']">Connected list</a></li>
