--- a/src/app/screens/basic-list/basic-list.component.html
+++ b/src/app/screens/basic-list/basic-list.component.html
@@ -1,5 +1,6 @@
 <ul appDropium (dropped)="dropped($event)"  returnInitialPosition="true">
    <li appDragium *ngFor="let item of items">     
+      <div class="example-custom-placeholder" appDragiumPlaceholder></div> 
       {{item}}
    </li>   
 </ul>
