--- a/src/app/screens/kanban/kanban.component.html
+++ b/src/app/screens/kanban/kanban.component.html
@@ -2,12 +2,12 @@
     <div class="page-content">
         <div class="row">                        
             <div class="col-md-12 block-ui-main" style="overflow-x:scroll;" id="board">
-                <div appDropium class="row sortableOptionsListsList u-fancy-scrollbar" [ngStyle]="{'width': (350*(kanbanLists.length+1)).toString()+'px' }">
-                    <div appDragium class="col-xs-12 col-sm-3 col-md-3 slBig" data-id="{{kanbanList.ListId}}" *ngFor="let kanbanList of kanbanLists">
-                        <h3 class="myHandle">
+                <div appDropium data="kanbanList" class="row sortableOptionsListsList u-fancy-scrollbar" [ngStyle]="{'width': (350*(kanbanLists.length+1)).toString()+'px' }">
+                    <div appDragium class="col-xs-12 col-sm-3 col-md-3 slBig" *ngFor="let kanbanList of kanbanLists">
+                        <h3 class="myHandle" appDragiumHandle>
                             <span id="ListTitle_{{kanbanList.ListId}}">{{kanbanList.ListName}}</span>
                         </h3>
-                        <ul appDropium  class="CardsList apps-container sortableOptionsLists" data-id="{{kanbanList.ListId}}" id="CardList_{{kanbanList.ListId}}">                    
+                        <ul appDropium data="kanbanList.Cards"  class="CardsList apps-container sortableOptionsLists" data-id="{{kanbanList.ListId}}" id="CardList_{{kanbanList.ListId}}">                    
                                 <li appDragium class="app appItem" data-id="{{card.CardId}}" id="Card_{{card.CardId}}" *ngFor="let card of kanbanList.Cards">
                                     <p>{{card.CardSummary}}</p>
                                     <div class="row">
@@ -17,10 +17,10 @@
                                     </div>
                                 </li>
                         </ul>
-                        <button class="btn btn-block btn-primary AddCard" data-id="{{kanbanList.ListId}}">Add...</button>
+                        <button class="btn btn-block btn-default"  data-id="{{kanbanList.ListId}}">Add...</button>
                     </div>        
                     <div appDropium class="col-xs-12 col-sm-2 col-md-2 slBig">
-                        <button type="button" class="btn btn-block btn-success" id="AddList">
+                        <button type="button" class="btn btn-block btn-default" id="AddList">
                             <span class="pull-left">
                                 <i class="fa fa-plus"></i>
                             </span>
