--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,7 +96,16 @@ div.box {
     background-color: #fafafa;
 }
 
+.dragging {
+ 
+  border:1px solid purple !important;
+  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+              0 2px 2px 0 rgba(0, 0, 0, 0.14),
+              0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
 
-[appDragiumPlaceholder] {
-  display: none;
+
+.dragium-placeholder {      
+  border:1px solid greenyellow !important; 
 }
