--- a/src/app/screens/workflow/wf-screen/wf-screen.component.html
+++ b/src/app/screens/workflow/wf-screen/wf-screen.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 120 120">
+<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 120 120" style="z-index:1200;position: relative;">
     <g id="screen" transform="translate(-1466 -809)">
     <rect id="Rectangle_4" data-name="Rectangle 4" width="120" height="120" rx="12" transform="translate(1466 809)" fill="#2055bb"/>
     <g id="Rectangle_5" data-name="Rectangle 5" transform="translate(1492.5 839)" fill="none" stroke="#fff" stroke-width="4">
@@ -10,3 +10,6 @@
     <path id="Path_4" data-name="Path 4" d="M3393.08,893.912h8.754v5.077h7.288l4.052,4.8v4.323h-30.746v-4.323l4.862-4.8h5.791v-5.563" transform="translate(-1871.5)" fill="#fff"/>
     </g>
 </svg>
+<div *ngIf="showIO">
+    <wf-io top="20" left="-15" [id]="id" [connectionType]="input"></wf-io>
+</div>
