--- a/src/app/screens/workflow/wf-start/wf-start.component.html
+++ b/src/app/screens/workflow/wf-start/wf-start.component.html
@@ -4,9 +4,6 @@
     <path id="Polygon_1" data-name="Polygon 1" d="M26,0,52,31H0Z" transform="translate(1011.5 603) rotate(90)" fill="#fff"/>
     </g>
 </svg>
-<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 56 56" style="position: relative;top:35px;left:-40px;z-index:900;">
-    <g id="Ellipse_4" data-name="Ellipse 4" fill="#fff" stroke="#dcdcdc" stroke-width="2">
-        <circle cx="28" cy="28" r="28" stroke="none"/>
-        <circle cx="28" cy="28" r="27" fill="none"/>
-    </g>
-</svg>    
+<div *ngIf="showIO">
+    <wf-io top="50" left="20" [id]="id" [connectionType]="output"></wf-io>
+</div>
