--- a/src/app/screens/workflow/workflow.component.scss
+++ b/src/app/screens/workflow/workflow.component.scss
@@ -1,3 +1,14 @@
+#FlowItems{
+    height: 110px;
+    padding-top: 20px;
+    
+    .wf-item {       
+        margin: 10px; 
+        width: 60px;
+        height: 60px;
+        display: inline-block;
+    }
+}
 #WorkflowContainer{
    
     height: 100%;
@@ -45,4 +56,7 @@ svg:not(:root) {
     fill: none;
     stroke-width: 5px;
     stroke: #4682b4;
+}
+.dragium-selected {
+    border:2px solid red;
 }
