--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,7 +96,7 @@ div.box {
     background-color: #fafafa;
 }
 
-.dragging {
+.dragium-dragging {
  
   border:1px solid purple !important;
   transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
