--- a/src/app/screens/workflow/wf-screen/wf-screen.component.html
+++ b/src/app/screens/workflow/wf-screen/wf-screen.component.html
@@ -11,5 +11,5 @@
     </g>
 </svg>
 <div *ngIf="showIO">
-    <wf-io top="20" left="-15" [id]="id" [connectionType]="input"></wf-io>
+    <wf-io top="20" left="-15" [id]="id" [connectionType]="'input'"></wf-io>
 </div>
