--- a/src/app/screens/workflow/wf-connection/wf-connection.component.html
+++ b/src/app/screens/workflow/wf-connection/wf-connection.component.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <svg style="position:fixed;position: fixed; fill: none;  stroke: dodgerblue; stroke-width: 2;">
+        <svg width height style="position:absolute;fill: none;  stroke: dodgerblue; stroke-width: 2;">
             <path [attr.d]="pathExpression()" stroke="#2055bb" stroke-width="2" fill="none" />
         </svg> 
     </div> 
