--- a/src/app/screens/workflow/wf-end/wf-end.component.html
+++ b/src/app/screens/workflow/wf-end/wf-end.component.html
@@ -4,3 +4,6 @@
     <rect id="Rectangle_2" data-name="Rectangle 2" width="57" height="55" transform="translate(1487 1677)" fill="#fff"/>
     </g>
 </svg>       
+<div *ngIf="showIO">
+    <wf-io top="20" left="-15" [id]="id" [connectionType]="'input'"></wf-io>
+</div>
