--- a/src/app/screens/workflow/wf-screen/wf-screen.component.html
+++ b/src/app/screens/workflow/wf-screen/wf-screen.component.html
@@ -13,3 +13,6 @@
 <div *ngIf="showIO">
     <wf-io top="20" left="-15" [id]="id" [connectionType]="'input'"></wf-io>
 </div>
+<div *ngIf="showIO">
+    <wf-io top="20" left="55" [id]="id" [connectionType]="'output'"></wf-io>
+</div>
